--- a/projekt/static/css/projekt/base.css
+++ b/projekt/static/css/projekt/base.css
@@ -55,3 +55,31 @@ a:hover {
 .navbar .navbar-toggler:hover {
     background-color: #7765e3;
 }
+
+.half-form-control {
+    display: block;
+    width:80%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    background-clip: padding-box;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: var(--bs-border-radius);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+
+legend {
+    font-size: 1rem !important;
+}
+
+.pack-contents {
+    width: 50%;
+    display:inline;
+    float:left;
+}
