--- a/projekt/templates/SmartsBankTemplate.html
+++ b/projekt/templates/SmartsBankTemplate.html
@@ -14,16 +14,22 @@
 </div>
 <div class="list-group">
     {% for item in smarts %}
-    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{ item.project_name }}</h5>
-            <small class="text-muted">{{ item.details }}</small>
-        </div>
-        <p class="mb-1">{{ item.application_field }}</p>
-        <small class="text-muted">Additional info</small>
-        <a href="{% url 'bank-smart' item.slug %}"
-           class="btn btn-outline-secondary btn-lg top-right-button mr-1 rounded-0">details</a>
-    </a>
+    <div class="mb-3 rounded">
+        <a href="{% url 'bank-smart' item.slug %}" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">{{ item.project_name }}</h5>
+                <small class="text-muted">{{ item.details }}</small>
+            </div>
+            <div class="row w-100">
+            {% for field in item.application_field.all %}
+                <p class="col-1 rand-colored"> {{ field.field_name }} </p>
+            {% endfor %}
+            </div>
+            <small class="text-muted">Additional info</small>
+            <a href="{% url 'bank-smart' item.slug %}"
+            class="btn btn-outline-secondary btn-lg top-right-button mr-1 rounded-0 w-100 rounded">details</a>
+        </a>
+    </div>
     {% empty %}
     <p>No items found.</p>
     {% endfor %}
